// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Asset Hub Vesting > forced vested transfer and forced removal of vesting schedule work > forced vested transfer event 1`] = `
[
  "DfnTB4z7eUvYRqcGtTpFsLC69o6tvBSC1pEv8vWPZFtCkaK",
  2500001,
]
`;

exports[`Kusama Asset Hub Vesting > forced vested transfer and forced removal of vesting schedule work > forced vesting removal event 1`] = `
[
  "DfnTB4z7eUvYRqcGtTpFsLC69o6tvBSC1pEv8vWPZFtCkaK",
]
`;

exports[`Kusama Asset Hub Vesting > merging vesting schedules when none exist fails > merge schedules extrinsic failed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 14,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 600000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Vesting > signed-origin force-vested transfer fails > force vest events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 800000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Vesting > test merger of two vesting schedules > vesting events 1 1`] = `
[
  {
    "data": {
      "account": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
      "scheduleIndex": 0,
    },
    "method": "VestingCreated",
    "section": "vesting",
  },
  {
    "data": {
      "account": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
      "unvested": "(rounded 6900000)",
    },
    "method": "VestingUpdated",
    "section": "vesting",
  },
]
`;

exports[`Kusama Asset Hub Vesting > test merger of two vesting schedules > vesting events 2 1`] = `
[
  {
    "data": {
      "account": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
      "scheduleIndex": 1,
    },
    "method": "VestingCreated",
    "section": "vesting",
  },
  {
    "data": {
      "account": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
      "unvested": "(rounded 21000000)",
    },
    "method": "VestingUpdated",
    "section": "vesting",
  },
]
`;

exports[`Kusama Asset Hub Vesting > test merger of two vesting schedules > vesting schedules merger events 1`] = `
[
  {
    "data": {
      "account": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
      "unvested": "(rounded 17000000)",
    },
    "method": "VestingUpdated",
    "section": "vesting",
  },
]
`;

exports[`Kusama Asset Hub Vesting > vesting schedule lifecycle > vest events 1`] = `
[
  {
    "data": {
      "account": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "scheduleIndex": 0,
    },
    "method": "VestingCreated",
    "section": "vesting",
  },
  {
    "data": {
      "account": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "unvested": "(rounded 13000000)",
    },
    "method": "VestingUpdated",
    "section": "vesting",
  },
]
`;

exports[`Kusama Asset Hub Vesting > vesting schedule lifecycle > vest events 2`] = `
[
  {
    "data": {
      "account": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
    },
    "method": "VestingCompleted",
    "section": "vesting",
  },
]
`;

exports[`Kusama Asset Hub Vesting > vesting schedule lifecycle > vest other events 1`] = `
[
  {
    "data": {
      "account": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "unvested": "(rounded 6700000)",
    },
    "method": "VestingUpdated",
    "section": "vesting",
  },
]
`;
